Backport PR #14413 to 8.4: Open java modules for gradle test after 7.5 upgrade (#14415)
Open the access to java.lang and java.util packages in java.base module.
With Gradle 7.5 these packages aren't anymore implicitly opened in test tasks. With this commit, those packages are opened for all test tasks, also on the buildSrc.

(cherry picked from commit 7887972348586471ae74416ff1e8b4fd3127b725)

Co-authored-by: Andrea Selva <selva.andre@gmail.com>